--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
   },
   "dependencies": {
     "autoprefixer": "^10.4.20",
-    "next": "14.2.14",
-    "react": "^18",
-    "react-dom": "^18"
+    "next": "^14.2.14",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@types/node": "^20",
