--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.6.0",
     "autoprefixer": "^10.4.20",
+    "boxicons": "^2.1.4",
     "next": "^14.2.14",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
